--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.0",
     "ember-cli-sri": "^2.0.0",
+    "ember-cli-star-rating": "0.4.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
